[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://CountdownTimer/CountdownTimer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 540.14, 523.658 )

[node name="Enemy" parent="." instance=ExtResource( 1 )]
position = Vector2( 540.889, 37.4577 )

[node name="CountdownTimer" parent="." instance=ExtResource( 3 )]
margin_left = 831.185
margin_top = 0.110123
margin_right = 1023.18
margin_bottom = 86.1101

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="time_elapsed" from="CountdownTimer" to="." method="_on_CountdownTimer_time_elapsed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
